name:                tweets2sqlite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AndrewQuinn2020/tweets2sqlite#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Quinn
maintainer:          AndrewQuinn2020@u.northwestern.edu
copyright:           2022 Andrew Quinn
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tweets2sqlite
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
